fixed alignment and padding of calendar

--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -265,7 +265,7 @@ ul {
   margin: 0px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1325px) {
   .calDiv  {
     padding: 0%;
     margin: 0%;
